# GameOfLife

./: CMakeLists.txt  CMakeLists.txt.user.74e1fbf  README.md  TestQString.cpp  gamelogic.cpp  gamelogic.h  main.cpp  mainmenu.cpp  mainmenu.cpp.autosave  mainmenu.h  playfield.cpp  playfield.cpp.autosave  playfield.h  utilities.cpp  utilities.h
gTest/: tst_testfieldprinter.cpp
test/: CMakeLists.txt  tst_testfieldconstructor.cpp  tst_testfieldconstructor.cpp.autosave  tst_testfieldconstructor.h
